Modification css + responsive

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <div class="game">
         <section id="the-game" class=>
             <h2>Le Jeu</h2>
-            <p id="game-error">Impossible de jouer sur Téléphone !</p>
+            <div class="game-error">
+                <p>SORRY</p>
+                <p>Impossible de jouer sur Téléphone !</p>
+            </div>
             <div class="mp-game">
                 <div class="game-container">
                     <span id="score">Score: 0</span>
