Amelioration du code 25jav

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
                     <div id="background"></div>
                     <div id="background-cloud"></div>
                     <div id="fox"></div>
-                    <div id="obstacle"></div>
-                    <div id="obstacle2"></div>
+                    <div id="roc1"></div>
+                    <div id="roc2"></div>
+                    <div id="roc3"></div>
                     <div id="start-message">
                         <p></p>
                         <p>Utiliser les touches <span><img class="icon" src="./src/img/icons/espace.png" alt="Touche espace du clavier"></span> ou <span><img class="icon" src="./src/img/icons/fleche-vers-le-haut.png" alt="Touche flèche du haut du clavier"></span> pour franchir les obstacles.</p>
