amérlioration du jeu - 26 janvier

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <div class="hide-cv">
         <h2>Pick your favorite !</h2>
         <div class="cv-contain">
-            <a href="./src/img/cv/CV-pdf/MelodyJacquemin-Développeuse-Full-Stack-pastel.pdf" target="_blank"><img class="cv" src="./src/img/cv/MjDfPastel.png" alt="CV Pastel"></a>
-            <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse-Full-Stack-grey.pdf" target="_blank"><img class="cv" src="./src/img/cv/MjDfGrey.png" alt="CV Nuances de gris"></a>
-            <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse Full-Stack-color.pdf" target="_blank"><img class="cv" src="./src/img/cv/MjDfColor.png" alt="CV Couleur"></a>
+            <a href="./src/img/cv/CV-pdf/MelodyJacquemin-Développeuse-Full-Stack-pastel.pdf" target="_blank"><img class="cv" src="./src/img/cv/pastel.png" alt="CV Pastel"></a>
+            <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse-Full-Stack-grey.pdf" target="_blank"><img class="cv" src="./src/img/cv/grey.png" alt="CV Nuances de gris"></a>
+            <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse Full-Stack-color.pdf" target="_blank"><img class="cv" src="./src/img/cv/color.png" alt="CV Couleur"></a>
         </div>
     </div>
     <footer>
