--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
         </header>
         <section id="instructions" class="mp">
             <div class="mp-content">
-                <h2>Instructions</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore quaerat, totam est impedit adipisci quibusdam enim facilis laborum recusandae unde suscipit rem repellat eius, cupiditate cumque labore magnam voluptatum sequi.
-                Sequi, fugit quibusdam sapiente a quos maxime non. Esse voluptatem provident magni accusamus facere quod cumque nisi, aspernatur repudiandae autem deleniti, dolor magnam sit nemo quam ratione cupiditate ipsa modi?</p>
+                <h2>Présentation</h2>
+                <p>Bonjour et bienvenue sur ma toute première création ! <br>C'est avec une immense joie que je partage avec vous le résultat de ces deux premiers mois d'apprentissage intensif dans mon parcours pour devenir développeuse FullStack. </p>
+                <p><strong>Le principe ?</strong> Accéder à mon CV de manière ludique, via un jeu de type T-rex game.</p> 
+                <p><strong>Au plaisir d'échanger avec vous dans un futur proche. </strong></p>
+                <p>Si le temps vous manque, vous trouverez dans la barre de navigation un raccourci direct. </p>
             </div>
         </section>
     </div>
@@ -57,6 +59,9 @@
                     <div id="roc1"></div>
                     <div id="roc2"></div>
                     <div id="roc3"></div>
+                    <audio id="jumpSound" src="/src/sounds/Jump.wav"></audio>
+                    <audio id="victorySound" src="/src/sounds/Victory.mp3"></audio>
+                    <audio id="defeatSound" src="/src/sounds/Death.mp3"></audio>
                     <div id="start-message">
                         <p></p>
                         <p>Utiliser les touches <span><img class="icon" src="./src/img/icons/espace.png" alt="Touche espace du clavier"></span> ou <span><img class="icon" src="./src/img/icons/fleche-vers-le-haut.png" alt="Touche flèche du haut du clavier"></span> pour franchir les obstacles.</p>
@@ -84,18 +89,8 @@
         </div>
     </div>
     <footer>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <p>©MelodyJacquemin</p>
     </footer>
     <script src="./src/js/script.js"></script>
 </body>
 </html>
-
-
-<!--<main class="mp">
-    <section >
-        <div class="instructions"></div>
-    </section>
-    <section>
-        <div class="monJeu"></div>
-    </section>
-</main> -->
