--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Monoton&display=swap" rel="stylesheet">
-    <script src="./vendors/jQuery/jquery.js"></script>
     <script src="https://kit.fontawesome.com/8c68d49fdd.js" crossorigin="anonymous"></script>
     <title>Melody Jacquemin - Développeuse FullStack</title>
 </head>
@@ -90,6 +89,12 @@
     <footer>
         <p>©MelodyJacquemin - 2024</p>
     </footer>
-    <script src="./src/js/script.js"></script>
+    <!-- <script src="./src/js/script.js"></script> -->
+    <script type="module" src="./src/js/modules/elements.js"></script>
+    <script type="module" src="./src/js/modules/actions.js"></script>
+    <script type="module" src="./src/js/modules/gameData.js"></script>
+    <script type="module" src="./src/js/modules/handlers.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
+
 </body>
 </html>
