last update - 30jan - final

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Monoton&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/8c68d49fdd.js" crossorigin="anonymous"></script>
+        <script src="./src/js/script.js"></script>
         <title>Melody Jacquemin - Développeuse FullStack</title>
     </head>
     <body>
@@ -21,7 +22,7 @@
             <header>
                 <h1 class="mp-logo">
                     <i class="fa-solid fa-gamepad"></i>
-                    <a href="#">MJ - <span>Kitsune game CV</span></a>
+                    <a href="#">MJ - <span>Kitsune </span>Game</a>
                 </h1>
                 <ul>
                     <li><a href="#presentation">Présentation</a></li>
@@ -31,9 +32,9 @@
             </header>
             <section id="presentation" class="mp">
                 <div class="mp-content">
-                    <h2>Présentation</h2>
-                    <p>Bonjour et bienvenue sur ma toute première création ! <br>C'est avec une immense joie que je partage avec vous le résultat de ces deux premiers mois d'apprentissage intensif dans mon parcours pour devenir développeuse FullStack. </p>
-                    <p><strong>Le principe ?</strong> <br> Accéder à mon CV de manière ludique en obtenant un score de 100pts.</p> 
+                    <h2>Bonjour et bienvenue !</h2>
+                    <p>C'est avec une immense joie que je partage avec vous le résultat de ces deux premiers mois d'apprentissage intensif de mon parcours pour devenir développeuse FullStack. </p>
+                    <p><strong>Le principe ?</strong> <br> Accéder à mon CV de manière ludique en aidant Kitsune le renard ! Comment ? Surmontez les obstacles qui se dressent sur sa route et obtenez un score de 100pts pour débloquer la partie cachée.</p> 
                     <p><strong>Au plaisir d'échanger avec vous dans un futur proche. </strong></p>
                     <p>Si le temps vous manque, vous trouverez dans la barre de navigation un raccourci direct. </p>
                 </div>
@@ -59,7 +60,7 @@
                         <audio id="jumpSound" src="/src/sounds/Jump.wav" preload="auto"></audio>
                         <audio id="victorySound" src="/src/sounds/Victory.mp3" preload="auto"></audio>
                         <audio id="defeatSound" src="/src/sounds/Death.mp3" preload="auto"></audio>
-                        <audio id="ambiantSound" src="/src/sounds/Night Ambient 5 (Loop).mp3" preload="auto"></audio>
+                        <audio id="ambiantSound" src="/src/sounds/NightAmbient5(Loop).mp3" preload="auto"></audio>
                         <div id="start-message">
                             <p></p>
                             <p>Utiliser les touches <span><img class="icon" src="./src/img/icons/espace.png" alt="Touche espace du clavier"></span> ou <span><img class="icon" src="./src/img/icons/fleche-vers-le-haut.png" alt="Touche flèche du haut du clavier"></span> pour franchir les obstacles.</p>
@@ -88,9 +89,13 @@
                 </div>
             </div>
             <footer>
+                <div class="brands">
+                    <a href="https://github.com/Fitzchevalry" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/jacquemin-melody" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                   <a href="maito:melodyjacquemin.mj@gmail.com" target="_blank"> <i class="fa-solid fa-at"></i></a>
+                </div>
                 <p>©MelodyJacquemin - 2024</p>
+            </footer>
         </div>
-        </footer>
-        <script src="./src/js/script.js"></script>
     </body>
 </html>
