--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
         </div>
         <div class="game">
-            <section id="the-game" class=>
+            <section id="the-game">
                 <h2>Le Jeu</h2>
                 <div class="game-error">
                     <p>SORRY</p>
@@ -62,7 +62,6 @@
                         <audio id="defeatSound" src="/src/sounds/Death.mp3" preload="auto"></audio>
                         <audio id="ambiantSound" src="/src/sounds/NightAmbient5(Loop).mp3" preload="auto"></audio>
                         <div id="start-message">
-                            <p></p>
                             <p>Utiliser les touches <span><img class="icon" src="./src/img/icons/espace.png" alt="Touche espace du clavier"></span> ou <span><img class="icon" src="./src/img/icons/fleche-vers-le-haut.png" alt="Touche flèche du haut du clavier"></span> pour franchir les obstacles.</p>
                             <button type="button" id="start-button">Commencer à jouer</button>
                         </div>
@@ -85,7 +84,7 @@
                 <div class="cv-contain">
                     <a href="./src/img/cv/CV-pdf/MelodyJacquemin-Développeuse-Full-Stack-pastel.pdf" target="_blank"><img class="cv" src="./src/img/cv/pastel.png" alt="CV Pastel"></a>
                     <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse-Full-Stack-grey.pdf" target="_blank"><img class="cv" src="./src/img/cv/grey.png" alt="CV Nuances de gris"></a>
-                    <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse Full-Stack-color.pdf" target="_blank"><img class="cv" src="./src/img/cv/color.png" alt="CV Couleur"></a>
+                    <a href="./src/img/cv/CV-pdf/Melody-Jacquemin-Développeuse-Full-Stack-color.pdf" target="_blank"><img class="cv" src="./src/img/cv/color.png" alt="CV Couleur"></a>
                 </div>
             </div>
             <footer>
